# hw_affinity_propagation

./: CMakeLists.txt  main.cpp
affinity_propagation/: CMakeLists.txt
affinity_propagation/include/affinity_propagation/: AffinityPropagation.hpp  Graph.hpp
affinity_propagation/src/: AffinityPropagation.cpp  Graph.cpp
scripts/: hist.r  main.py  out.txt
